@@ -56,12 +56,12 @@ int readConfig_HSI_88( xmlDocPtr doc, xmlNodePtr node, bus_t busnumber )
   xmlNodePtr child = node->children;
   xmlChar *txt = NULL;
 
-  while ( child != NULL )
-  {
-    if ( xmlStrncmp( child->name, BAD_CAST "text", 4 ) == 0 )
-    {
-      /* just do nothing, it is only a comment */
-    }
+  while ( child != NULL ) {
+
+        if ((xmlStrncmp(child->name, BAD_CAST "text", 4) == 0) ||
+            (xmlStrncmp(child->name, BAD_CAST "comment", 7) == 0)) {
+            /* just do nothing, it is only formatting text or a comment */
+        }
 
     else if ( xmlStrcmp( child->name, BAD_CAST "refresh" ) == 0 )
     {
